# ecs-task-spawner

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/app/: api.rs  handlers.rs  mod.rs  models.rs
src/auth/: api.rs
src/ecs/: impls.rs  models.rs
src/error/: impls.rs  models.rs
src/errors/: impls.rs  models.rs
src/health/: app.rs  handlers.rs  models.rs
src/spawner/: impls.rs  models.rs
src/task/: models.rs
terraform/: main.tf
