[package]
name = "ecs-task-spawner"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
aws-config = { version = "1.5.2", features = ["behavior-version-latest"] }
aws-sdk-ecs = "1.35.0"
axum = { version = "0.7.5", features = ["default"] }
axum-macros = "0.4.1"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-otel-metrics = "0.8.1"
axum-tracing-opentelemetry = "0.18.1"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tower-http = { version = "0.5.2", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
thiserror = "1.0.61"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
